--- a/CrudWithJQueryDatatable/packages.config
+++ b/CrudWithJQueryDatatable/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BeginCollectionItem" version="1.2.1.0" targetFramework="net472" />
   <package id="bootstrap" version="3.3.1" targetFramework="net472" />
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
