--- a/CrudWithJQueryDatatable/packages.config
+++ b/CrudWithJQueryDatatable/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net472" />
   <package id="BeginCollectionItem" version="1.2.1.0" targetFramework="net472" />
   <package id="bootstrap" version="3.3.1" targetFramework="net472" />
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="2.0.0" targetFramework="net472" />
+  <package id="jquery.jcrop.js" version="0.9.12" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -12,6 +14,7 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
@@ -36,4 +39,5 @@
   <package id="Unity.Container" version="5.11.1" targetFramework="net472" />
   <package id="Unity.Mvc" version="5.11.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net472" />
 </packages>
